kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-platform
  labels:
    name: devsecops-platform
    app: monitoring-platform
